@@ -57,8 +57,28 @@ uses
   {$ELSE}
     cmem,
   {$ENDIF}
+  SysUtils,
+  commandlineutil,
   console;
 
+var
+  fBinaryFilename, fCmdLine: String;
+  i: Integer;
+
 begin
+  fBinaryFilename := ExtractFileName(ParamStr(0));
+  if ParamCount <> 0 then
+  begin
+    // execute command line util
+    for i := 1 to ParamCount do
+    begin
+      fCmdLine := fCmdLine + ParamStr(i) + ' ';
+    end;
+    fCmdLine := fCmdLine.Trim;
+
+    ParseCommandLine(fBinaryFilename, fCmdLine);
+    Exit;
+  end;
+
   ConsoleStart;
 end.
