@@ -53,6 +53,7 @@
 
 --=============================( SLFTP v1.5.8 )===================================-
     {+} Reverse FXP can be enabled by command !reversefxp
+    {+} cryptconf functionality integrated into slftp as command line utility, see 'slftp(.exe) --help' (#298)
     {#} Fix 'No such directory' error flood if a subdir was deleted during a race (#200)
     {^} New code for IMDb and Box Office Mojo website parsing
     {^} Slightly improved behaviour for STV/Wide/Limited determination
